--- a/client/src/styles/UserpfpCard.css
+++ b/client/src/styles/UserpfpCard.css
@@ -2,8 +2,13 @@ section.userpfpDiv {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 section.userpfpDiv > div {
-    text-align: center;
+    padding: 15px;
 }
+
+section.userpfpDiv > div * {
+    width: min-content;
+}   
